--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
                             </svg>
                         </div>
                     </div>
-
+					
+                    <div class="overflow-x-hidden">
 					<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 4rem;">Recepción de boda</h1>
                             <h1 class="font-esthetic" style="font-size: 3.5rem;">Quinta "Los Helechos"</h1>
