--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
 
                 <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; Rene</h1>
-                <p class="mb-5" style="font-size: 2.5rem;">16 de Noviembre de 2024</p>
+                <p class="mb-5" style="font-size: 2rem;">16 de Noviembre de 2024</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.app.google/PgiiRxev9aLeP1Ki8">
                          <i class="fa-solid fa-calendar-check me-2"></i>Save The Date <br> Confirma aquí tu asistencia <br> <strong>¡Gracias!</strong>
@@ -217,15 +217,15 @@
         <div class="container">
             <div class="text-center" data-aos="fade-up" data-aos-duration="2000"  >
 
-                <h1 class="font-esthetic mt-0 mb-3" style="font-size: 4rem">
+                <h1 class="font-esthetic mt-0 mb-3" style="font-size: 2.5rem">
                     Hay momentos en la vida que son especiales por sí mismos,
                 </h1>
 
-                <p style="font-size: 2rem;" class="px-2">
+                <p style="font-size: 1.5rem;" class="px-2">
                 pero compartirlos con las personas que amamos los hace inolvidables.
                 </p>
 
-                <p class="m-0 fw-bold" style="font-size: 1.7rem;">Te esperamos con los brazos abiertos</p>
+                <p class="m-0 fw-bold" style="font-size: 1.5rem;">Te esperamos con los brazos abiertos</p>
             </div>
         </div>
 
@@ -281,8 +281,8 @@
 					
                     <div class="overflow-x-hidden">
 					<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
-                            <h1 class="font-esthetic" style="font-size: 4rem;">Recepción de boda</h1>
-                            <h1 class="font-esthetic" style="font-size: 3.5rem;">Quinta "Los Helechos"</h1>
+                            <h1 class="font-esthetic" style="font-size: 3rem;">Recepción de boda</h1>
+                            <h1 class="font-esthetic" style="font-size: 3rem;">Quinta "Los Helechos"</h1>
 							<h1 class="font-esthetic2" style="font-size: 1.5rem;">Sábado 16 de Noviembre de 2024. <br>A las 3:30pm </h1>
                         </div>
 
@@ -296,7 +296,7 @@
                     </div>
                 </div>
             </div>
-     
+          </div>
         </section>
 
         <!-- Love animation -->
@@ -329,13 +329,13 @@
     <div class="loading-page bg-black" id="welcome" style="opacity: 1;">
         <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
             <div class="text-center">
-                <h1 class="font-esthetic mb-4" style="font-size: 5.5rem;">¡Nos casamos!</h1>
+                <h1 class="font-esthetic mb-4" style="font-size: 4rem;">¡Nos casamos!</h1>
 
                 <div class="img-crop border border-3 border-light shadow mb-4 mx-auto">
                     <img src="./assets/images/bg.png" alt="background">
                 </div>
 
-                <h1 class="font-esthetic my-4" style="font-size: 3.5rem;">Cinthya &amp; René</h1>
+                <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; René</h1>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
 
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="util.open(this)">
