--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
 
-                <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; Rene</h1>
+                <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; René</h1>
                 <p class="mb-5" style="font-size: 2rem;">16 de Noviembre de 2024</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.app.google/PgiiRxev9aLeP1Ki8">
@@ -135,26 +135,24 @@
         </svg>
 
         <!-- Mempelai -->
-        <section class="dark-section bg-black" id="mempelai">
+        <section class="dark-section bg-black" id="mempelai" style="background-image: url('./assets/images/flower2.png'); background-size: cover; background-position: center;">
 
             <div class="text-center">
                 <h1 class="font-arabic py-4 px-2" style="font-size: 2rem"><strong>NUESTRO MATRIMONIO</strong></h1>
 
                 <!-- Love animation -->
-                <div class="position-relative">
-                    <div class="position-absolute" style="top: 0%; right: 10%;">
-                        <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#ff7a42" class="opacity-100" onload="util.animate(this, 500, 'animate-love')" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                        </svg>
+                <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
+                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
+ 					</div>
                     </div>
                 </div>
                 <!-- Love animation -->
-                <div class="position-relative">
-                    <div class="position-absolute" style="top: 0%; left: 10%;">
-                        <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#50688e" class="opacity-100" onload="util.animate(this, 2000, 'animate-love')" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                        </svg>
+                <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;">
+        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
+					</div>
                 </div>
 
                 <div class="overflow-x-hidden">
@@ -168,22 +166,19 @@
                     </div>
 
                     <!-- Love animation -->
-                    <div class="position-relative">
-                        <div class="position-absolute" style="top: 0%; right: 10%;">
-                            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#50688e" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" viewBox="0 0 16 16">
-                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                            </svg>
+                    <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
+                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                         </div>
                     </div>
-
+</div>
                     <h1 class="font-esthetic my-4" style="font-size: 4rem;">&</h1>
 
                     <!-- Love animation -->
-                    <div class="position-relative">
-                        <div class="position-absolute" style="top: 0%; left: 10%;">
-                            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#ff7a42" class="opacity-100" onload="util.animate(this, 2000, 'animate-love')" viewBox="0 0 16 16">
-                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                            </svg>
+                    <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;">
+        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
+		                        </div>
                         </div>
                     </div>
 
@@ -197,14 +192,12 @@
                 </div>
 
                 <!-- Ballon animation -->
-                <div class="position-relative">
-                    <div class="position-absolute" style="top: 0%; right: 5%;">
-                        <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#ff7a42" class="opacity-100" onload="util.animate(this, 1500, 'animate-love')" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398"></path>
-                        </svg>
+              <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
+                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
                 </div>
-
+			</div>
             </div>
         </section>
 
@@ -230,11 +223,11 @@
         </div>
 
         <!-- Ballon animation -->
-        <div class="position-relative">
-            <div class="position-absolute" style="top: 0%; left: 5%;">
-                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#50688e" class="opacity-100" onload="util.animate(this, 4000, 'animate-love')" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398"></path>
-                </svg>
+        <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
+        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
+		            </div>
+		</div>
             </div>
         </div>
 
@@ -244,7 +237,7 @@
         </svg>
 
         <!-- Tanggal -->
-        <section class="dark-section bg-black" id="tanggal">
+        <section class="dark-section bg-black" id="tanggal" style="background-image: url('./assets/images/flower2.png'); background-size: cover; background-position: center;">
 
             <div class="container">
                 <div class="text-center">
@@ -271,14 +264,13 @@
                     </p>
 
                     <!-- Love animation -->
-                    <div class="position-relative">
-                        <div class="position-absolute" style="top: 0%; right: 10%;">
-                            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#ff7a42" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" viewBox="0 0 16 16">
-                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                            </svg>
+                    <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
+                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                         </div>
                     </div>
-					
+					                        </div>
+
                     <div class="overflow-x-hidden">
 					<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 3rem;">Recepción de boda</h1>
@@ -300,13 +292,12 @@
         </section>
 
         <!-- Love animation -->
-        <div class="position-relative">
-            <div class="position-absolute" style="top: 0%; left: 10%;">
-                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="#3F818F" class="opacity-100" onload="util.animate(this, 2000, 'animate-love')" viewBox="0 0 16 16">
-                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                </svg>
-            </div>
+       <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;">
+        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
+    </div>
         </div>
+		     </div>
 
     </main>
 
@@ -315,7 +306,7 @@
         <div class="container">
             <div class="text-center">
 
-                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1"></i><br>que nos puedas acompañar</h1>
+                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1" ></i><br>que nos puedas acompañar</h1>
 
                 <hr class="mt-3 mb-2">
 
