--- a/index.html
+++ b/index.html
@@ -142,17 +142,18 @@
 
                 <!-- Love animation -->
                 <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
-                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                        <div class="position-absolute" style="top: 0%; right: 0%;">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
  					</div>
                     </div>
                 </div>
+				
                 <!-- Love animation -->
-                <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
-    <div class="position-absolute" style="top: -50%; left: 10%;">
+               <div class="position-relative">
+    <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
-					</div>
+                    </div>
                 </div>
 
                 <div class="overflow-x-hidden">
@@ -166,19 +167,20 @@
                     </div>
 
                     <!-- Love animation -->
-                    <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
-                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                    <div class="position-relative">
+                        <div class="position-absolute" style="top: 0%; right: 10%;"><div data-aos="fade-right" data-aos-duration="2000">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                         </div>
+                        </div>
                     </div>
-</div>
+
                     <h1 class="font-esthetic my-4" style="font-size: 4rem;">&</h1>
 
                     <!-- Love animation -->
-                    <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
-    <div class="position-absolute" style="top: -50%; left: 10%;">
+                    <div class="position-relative">
+                        <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
-		                        </div>
+                            </div>
                         </div>
                     </div>
 
@@ -192,12 +194,13 @@
                 </div>
 
                 <!-- Ballon animation -->
-              <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
-                        <div class="position-absolute" style="top: 100%; right: 0%;">
+                <div class="position-relative">
+                    <div class="position-absolute" style="top: 100%; right: 0%;"><div data-aos="fade-right" data-aos-duration="2000">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
+                    </div>
                 </div>
-			</div>
+
             </div>
         </section>
 
@@ -223,10 +226,9 @@
         </div>
 
         <!-- Ballon animation -->
-        <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
-    <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
+        <div class="position-relative">
+            <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
-		            </div>
 		</div>
             </div>
         </div>
@@ -264,13 +266,13 @@
                     </p>
 
                     <!-- Love animation -->
-                    <div class="position-relative"><div data-aos="fade-left" data-aos-duration="2000">
-                        <div class="position-absolute" style="top: 100%; right: 0%;">
-                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
+                    <div class="position-relative">
+                        <div class="position-absolute" style="top: 100%; right: 0%;"><div data-aos="fade-right" data-aos-duration="2000">
+                            <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG">
+                        </div>
                         </div>
                     </div>
-					                        </div>
-
+					
                     <div class="overflow-x-hidden">
 					<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 3rem;">Recepción de boda</h1>
@@ -292,13 +294,12 @@
         </section>
 
         <!-- Love animation -->
-       <div class="position-relative"><div data-aos="fade-right" data-aos-duration="2000">
-    <div class="position-absolute" style="top: -50%; left: 10%;">
-        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
-    </div>
+        <div class="position-relative">
+            <div class="position-absolute" style="top: 0%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
+                <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG">
+            </div>
         </div>
-		     </div>
-
+</div>
     </main>
 
     <!-- Footer Undangan -->
@@ -306,7 +307,7 @@
         <div class="container">
             <div class="text-center">
 
-                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1" ></i><br>que nos puedas acompañar</h1>
+                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1"></i><br>que nos puedas acompañar</h1>
 
                 <hr class="mt-3 mb-2">
 
