--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
     <title>Invitación de Cinthya y René</title>
 
     <!-- SEO Tag -->
-    <meta name="author" content="Rene">
-    <meta name="language" content="Español">
+    <meta name="author" content="dewanakl">
+    <meta name="language" content="Spanish">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Invitación de Boda <br> de Cinthya & René">
+    <meta name="title" content="Invitación de Boda de Cinthya & René">
     <meta name="description" content="Encuentra aquí el enlace a nuestro pequeño evento">
     <meta name="keywords" content="Boda">
     <meta property="og:title" content="Invitación de Cinthya y René">
     <meta property="og:description" content="Encuentra aquí el enlace a nuestro pequeño evento">
-    <meta property="og:keywords" content="">
-    <meta property="og:image" content="/assets/images/bg.jpeg">
-    <meta property="og:image:secure_url" content="">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:alt" content="">
+    <meta property="og:keywords" content="Invitación de boda">
+    <meta property="og:image" content="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/oki.png">
+    <meta property="og:image:secure_url" content="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/oki.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Encuentra aquí el enlace a nuestro pequeño evento">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://hrhigher.github.io/Cin-Ren">
     <meta property="og:site_name" content="Invitación de Cinthya y Rene">
 
 <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="">
+    <meta name="apple-mobile-web-app-title" content="Encuentra aquí el enlace a nuestro pequeño evento">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="light">
-    <link rel="canonical">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="/assets/images/icon-192x192.png">
+    <link rel="canonical" href="https://hrhigher.github.io/Cin-Ren/">
+    <link rel="shortcut icon" type="image/x-icon" href="https://github.com/Hrhigher/Cin-Ren/blob/main/favicon.ico">
+    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/icon-192x192.png">
     <link rel="icon" type="image/x-icon" >
 
     <!-- Preconnect and preload CDN -->
