--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
     <title>Invitación de Cinthya y René</title>
 
     <!-- SEO Tag -->
-    <meta name="author" content="dewanakl">
-    <meta name="language" content="Spanish">
+    <meta name="author" content="Rene">
+    <meta name="language" content="Español">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Invitación de Boda de Cinthya & René">
+    <meta name="title" content="Invitación de Boda <br> de Cinthya & René">
     <meta name="description" content="Encuentra aquí el enlace a nuestro pequeño evento">
     <meta name="keywords" content="Boda">
     <meta property="og:title" content="Invitación de Cinthya y René">
     <meta property="og:description" content="Encuentra aquí el enlace a nuestro pequeño evento">
-    <meta property="og:keywords" content="Invitación de boda">
-    <meta property="og:image" content="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/oki.png">
-    <meta property="og:image:secure_url" content="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/oki.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Encuentra aquí el enlace a nuestro pequeño evento">
+    <meta property="og:keywords" content="">
+    <meta property="og:image" content="/assets/images/bg.jpeg">
+    <meta property="og:image:secure_url" content="">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="https://hrhigher.github.io/Cin-Ren">
+    <meta property="og:url" content="">
     <meta property="og:site_name" content="Invitación de Cinthya y Rene">
 
 <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Encuentra aquí el enlace a nuestro pequeño evento">
+    <meta name="apple-mobile-web-app-title" content="">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="light">
-    <link rel="canonical" href="https://hrhigher.github.io/Cin-Ren/">
-    <link rel="shortcut icon" type="image/x-icon" href="https://github.com/Hrhigher/Cin-Ren/blob/main/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="https://github.com/Hrhigher/Cin-Ren/blob/main/assets/images/icon-192x192.png">
+    <link rel="canonical">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="192x192" type="image/png" href="/assets/images/icon-192x192.png">
     <link rel="icon" type="image/x-icon" >
 
     <!-- Preconnect and preload CDN -->
@@ -98,6 +98,7 @@
     </nav>
 
     <!-- Main Content -->
+	
     <main class="bg-dark text-light" data-bs-spy="scroll" data-bs-target="#navbar-menu" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <!-- Home -->
@@ -112,7 +113,7 @@
                     </div>
                 </div>
 
-                <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; René</h1>
+                <h1 class="font-esthetic my-4" style="font-size: 4rem;">Cinthya &amp; Rene</h1>
                 <p class="mb-5" style="font-size: 2rem;">16 de Noviembre de 2024</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.app.google/PgiiRxev9aLeP1Ki8">
@@ -149,13 +150,13 @@
                 </div>
 				
                 <!-- Love animation -->
-               <div class="position-relative">
+                <div class="position-relative">
     <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
-                    </div>
+					</div>
                 </div>
-
+</div>
                 <div class="overflow-x-hidden">
 
                     <div data-aos="fade-right" data-aos-duration="2000">
@@ -171,16 +172,15 @@
                         <div class="position-absolute" style="top: 0%; right: 10%;"><div data-aos="fade-right" data-aos-duration="2000">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                         </div>
-                        </div>
                     </div>
-
+</div>
                     <h1 class="font-esthetic my-4" style="font-size: 4rem;">&</h1>
 
                     <!-- Love animation -->
                     <div class="position-relative">
-                        <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
-                            </div>
+		                        </div>
                         </div>
                     </div>
 
@@ -194,14 +194,12 @@
                 </div>
 
                 <!-- Ballon animation -->
-                <div class="position-relative">
-                    <div class="position-absolute" style="top: 100%; right: 0%;"><div data-aos="fade-right" data-aos-duration="2000">
+              <div class="position-relative">
+                        <div class="position-absolute" style="top: 100%; right: 0%;"><div data-aos="fade-right" data-aos-duration="2000">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
                     </div>
-                    </div>
                 </div>
-
-            </div>
+			</div>
         </section>
 
         <!-- Wave Separator -->
@@ -227,7 +225,7 @@
 
         <!-- Ballon animation -->
         <div class="position-relative">
-            <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
+    <div class="position-absolute" style="top: -50%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG" viewBox="0 0 16 16">
 		</div>
             </div>
@@ -267,12 +265,12 @@
 
                     <!-- Love animation -->
                     <div class="position-relative">
-                        <div class="position-absolute" style="top: 100%; right: 0%;"><div data-aos="fade-right" data-aos-duration="2000">
+                        <div class="position-absolute" style="top: 100%; left: 0%;"><div data-aos="fade-left" data-aos-duration="2000">
                             <img src="./assets/svg/flower2.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG">
                         </div>
-                        </div>
                     </div>
-					
+					                        </div>
+
                     <div class="overflow-x-hidden">
 					<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h1 class="font-esthetic" style="font-size: 3rem;">Recepción de boda</h1>
@@ -294,12 +292,12 @@
         </section>
 
         <!-- Love animation -->
-        <div class="position-relative">
-            <div class="position-absolute" style="top: 0%; left: 10%;"><div data-aos="fade-left" data-aos-duration="2000">
-                <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG">
-            </div>
-        </div>
-</div>
+       <div class="position-relative">
+    <div class="position-absolute" style="top: -50%; left: 10%;">
+        <img src="./assets/svg/flower.svg" width="186" height="186" class="opacity-100" onload="util.animate(this, 3000, 'animate-love')" alt="Flor SVG">
+    </div>
+		</div>
+
     </main>
 
     <!-- Footer Undangan -->
@@ -307,7 +305,7 @@
         <div class="container">
             <div class="text-center">
 
-                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1"></i><br>que nos puedas acompañar</h1>
+                <h1 class="font-esthetic" data-aos="fade-up" data-aos-duration="2000">Agradeceremos infinitamente<br><i class="fa-solid fa-heart mx-1" ></i><br>que nos puedas acompañar</h1>
 
                 <hr class="mt-3 mb-2">
 
